--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 	<meta name="HandheldFriendly" content="true">
 	<meta name="theme-color" content="#F26B38">
 
-	<title>Happy Birthday | Siddhant Sharma</title>
+	<title>Happy Birthday</title>
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -22,15 +22,39 @@
 	<div id="card">
 		<div id="card-inside">
 			<div class="wrap">
-				<center><p class="animated infinite wobble"><b><u>Happy Birthday!</b></u></p><center>
-				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco &nbsp;<i class="em-svg em-blush"></i></p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-				 </p><p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
+				<center><p class="animated infinite wobble"><b><u>Feliz aniversário minha vida!</b></u></p><center>
+				<p> Hoje é o aniversário da mulher da minha vida, a mulher que me escolheu para estar ao lado nessa jornada, simplesmente a
+				mulher mais inteligente, esforçada, guerreira que eu conheço.
+				Esses dias eu li em algum post da internet que nossos pais nos amam por sermos filhos deles, nossos irmãos por sermos
+				irmãos deles, mas quando se trata da pessoa que é nossa parceira,
+				essa pessoa ESCOLHEU nos amar, e eu fico muito feliz em poder falar que eu escolhi te amar, te amar foi a decisão mais
+				fácil que eu já tomei na minha vida inteira, porque era uma escolha
+				simples porque é um amor natural, um companherismo natural. Quando nos encontramos foi numa fase que eu estava com uma
+				armadura em um nivel tão alto pra me proteger que tu chegou e passou
+				por ela como se não fosse nada, me mostrando o que era o amor. Não por acaso os orixás falaram que eu encontrei a minha
+				metade da laranja, a minha alma gemea.</i></p>
+				<p>4 anos depois, estamos na nossa casa, comemorando o teu primeiro aniversário no nosso lar. Me despedir de ti todas as
+				manhãs (mesmo que dormindo ainda, ok?) e te encontrar todos os dias no fim
+				do dia é uma das maiores alegrias que eu tenho. Tu me faz uma pessoa feliz, tu me faz querer ser um homem melhor, quero
+				que tu saiba que eu sempre estarei do teu lado para todos os tipos de
+				situações que surgirem. Te amo imenso!</p>
+				<p>E pra acabar, o de sempre: </p> 
+				<p class = "quoteMusica">	
+					'Bem ariana, menina, mandona
+					Linda, sabe da sina, mina valentona
+					Fina, cheia de razão, rainha, foliona
+					Ela descortina o novo e bota fim na zona
+					Teu olhar ilumina, abomina o cafona
+					Amazona e bailarina, toda bonitona
+					Ela é purpurina, esquina e paquitona
+					Nove da matina, um café na poltrona'
+				</p>
+				<p class="signed"><u>Com amor, Émerson </b><b> <i class="em-svg em-heart"></i></p>
 			</div>
 		</div>
 		<div id="card-front">
 			<div class="wrap">
-				<h1 class="animated infinite swing">Happy Birthday Love</h1>
+				<h1 class="animated infinite swing">Feliz aniversário!</h1> <br>
 				<div class="cake_and_velas">
 					<div class="velas">
 						<div class="fuego"></div>
@@ -62,14 +86,12 @@
 					</svg>
 				</div>
 			</div>
-			<button id="open" data-balloon="Click to Open Card!" data-balloon-length="medium" data-balloon-pos="left" data-balloon-visible>&gt;
-			</button>
-			<button id="close" data-balloon="! bɿɒɔ ɘƨolɔ oɈ ʞɔilƆ" data-balloon-length="medium" data-balloon-pos="left" data-balloon-visible>&lt;
-			</button>
+			<button id="open" data-balloon-length="medium" data-balloon-pos="left" data-balloon-visible> &gt; </button>
+			<button id="close" data-balloon="! bɿɒɔ ɘƨolɔ oɈ ʞɔilƆ" data-balloon-length="medium" data-balloon-pos="left" data-balloon-visible> &lt; </button>
 			<div class="card-front_inside">
 				<br> <br> <br>
 				<div class="polaroid">
-					<div class="img" style="background-image: url('https://static.vecteezy.com/system/resources/previews/000/608/881/original/heart-flat-icon-vector.jpg')"></div>
+					<div class="img"><img src="../css/nosDois2.jpg" alt=""></div>
 				</div>
 				<div class="shadow"></div>
 			</div>
